corrections collapse

--- a/src/components/ficheLogement/_ficheLogement.scss
+++ b/src/components/ficheLogement/_ficheLogement.scss
@@ -31,7 +31,7 @@
     min-width: 45%; 
     box-sizing: border-box;
   &__equipments {
-    height: 3vh;
+    height: 1.4vh;
   }
   }
   }
